--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>run.Runner</mainClass>
+                            <mainClass>Runner</mainClass>
                         </manifest>
                         <manifestEntries>
                             <Class-Path>.</Class-Path>
